# mkdev

./: .dev-config.toml  .gitignore  Cargo.toml  LICENSE  README.md  build.rs  config_builder.py  config_builder.tcss  config_parsing.py  flake.nix  help.py  mkd_config.py  mkdev-logo.txt  mkdev.nix  mkdev.py  mkf.nix  package.nix  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml  tests.yml
config/: c++.yaml  java.yaml  nix.yaml  py.yaml  tex.yaml
config/templates/c++/: Makefile  [r]main.cpp
config/templates/java/: Makefile
config/templates/nix/: [r]def.nix  [r]home-manager.nix  shell.nix
config/templates/py/: [r]default.py  __init__.py
config/templates/tex/: [r]beamer.tex  [r]default.tex
config_builder/: cli_config_builder.py  recipe_form.py
config_builder/cli/: __init__.py  cli_config_builder.py  config_builder.tcss  recipe_form.py  template_form.py
docs/: config.md  usage.md
locales/: en-GB.toml  en-ZA.toml  en.toml  es.toml
logo/: README.md
mkdev-bin/: config.rs  delete.rs  evoke.rs  imprint.rs  list.rs  main.rs
mkdev-cli/: Cargo.toml  build.rs
mkdev-cli/src/: cli.rs  lib.rs  man.rs  output_type.rs  recipe_completer.rs  searchable.rs
mkdev-recipe/: Cargo.toml
mkdev-recipe/src/: config.rs  lib.rs  recipe.rs  subs.rs
nix/: home-manager.nix  mkdev.nix  mkf.nix
scripts/: mkf.sh
src/: build_recipe.rs  cli.rs  config.rs  config_hook.rs  content.rs  delete.rs  evoke.rs  fs_wrappers.rs  hooks.rs  imprint.rs  list.rs  main.rs  mkdev_error.rs  output_type.rs  recipe.rs  recipe_completer.rs  replacer.rs  search.rs  subs.rs
src/content/: mod.rs  tree.rs
src/display/: display_config.rs  mod.rs  tree.rs
src/hooks/: cfg.rs  i18n.rs  man.rs  mod.rs
src/mkdev/: __main__.py  config_parsing.py
src/mkdev/config_builder/: cli_config_builder.py  edit_dialogue.py  template_form.py
src/nix/: test.rs
src/recipe/: delete.rs  evoke.rs  imprint.rs  lang.rs  list.rs  mod.rs  version.rs
