[package]
name = "mkdev"
version = "3.2.0"
edition = "2021"
authors = ["James Craven <4jamesccraven@gmail.com>"]
description = "Save your boilerplate instead of writing it."

[[bin]]
name = "mk"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.23", features = ["cargo", "derive"] }
clap_complete = { version = "4.5.47", features = ["unstable-dynamic"] }
duct = "0.13.7"
mkdev-cli = { path = "./mkdev-cli" }
mkdev-recipe = { path = "./mkdev-recipe/" }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.8.19"
