[package]
name = "mkdev"
version = "3.3.0"
edition = "2021"
authors = ["James Craven <4jamesccraven@gmail.com>"]
description = "Save your boilerplate instead of writing it."
license = "MIT"
documentation = "https://github.com/4jamesccraven/mkdev/wiki"
homepage = "https://github.com/4jamesccraven/mkdev"
repository = "https://github.com/4jamesccraven/mkdev"
readme = "README.md"
categories = ["command-line-utilities", "template-engine"]
exclude = ["*.nix", "flake.lock", "scripts/", ".github/workflows/", "rustfmt.toml", ".gitignore"]

[[bin]]
name = "mk"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.23", features = ["cargo", "derive"] }
clap_complete = { version = "4.5.47", features = ["unstable-dynamic"] }
clap_mangen = "0.2.26"
dirs = "5.0.1"
hyperpolyglot = "0.1.7"
regex = "1.11.1"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.140"
ser_nix = "0.1.1"
toml = "0.8.19"
thiserror = "2.0.12"
colored = "3.0.0"
once_cell = "1.21.3"
ignore = "0.4.23"

[profile.release]
codegen-units = 1
lto = true
