[package]
name = "mkdev"
version = "3.4.2"
edition = "2024"
authors = ["James Craven <4jamesccraven@gmail.com>"]
description = "Save your boilerplate instead of writing it."
license = "MIT"
documentation = "https://github.com/4jamesccraven/mkdev/wiki"
homepage = "https://github.com/4jamesccraven/mkdev"
repository = "https://github.com/4jamesccraven/mkdev"
readme = "README.md"
categories = ["command-line-utilities", "template-engine"]
exclude = [
    "*.nix",
    ".github/workflows/",
    ".gitignore",
    "flake.lock",
    "logo/",
    "rustfmt.toml",
    "scripts/"
]

[[bin]]
name = "mk"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.23", features = ["cargo", "derive"] }
clap_complete = { version = "4.5.47", features = ["unstable-dynamic"] }
clap_mangen = "0.2.26"
colored = "3.0.0"
confique = { version = "0.4.0", features = ["toml"] }
dirs = "5.0.1"
hyperpolyglot = "0.1.7"
ignore = "0.4.23"
rust-i18n = "3.1.5"
ser_nix = "0.2.2"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.140"
sys-locale = "0.3.2"
toml = "0.8.19"

[profile.release]
codegen-units = 1
lto = true
